src/azure-cli/azure/cli/command_modules/network/tests/hybrid_2019_03_01/recordings/test_network_extended_nsg.yaml
interactions:
- request:
    body: null
    headers:
      Accept:
      - application/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg create
      Connection:
      - keep-alive
      ParameterSetName:
      - --name -g
      User-Agent:
      - AZURECLI/2.45.0 azsdk-python-azure-mgmt-resource/21.1.0b1 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/cli_test_extended_nsg000001?api-version=2018-05-01
  response:
    body:
      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001","name":"cli_test_extended_nsg000001","location":"westus","tags":{"product":"azurecli","cause":"automation","date":"2023-03-03T03:36:50Z"},"properties":{"provisioningState":"Succeeded"}}'
    headers:
      cache-control:
      - no-cache
      content-length:
      - '288'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 03:36:54 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
    status:
      code: 200
      message: OK
- request:
    body: '{"location": "westus"}'
    headers:
      Accept:
      - application/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg create
      Connection:
      - keep-alive
      Content-Length:
      - '22'
      Content-Type:
      - application/json
      ParameterSetName:
      - --name -g
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1?api-version=2017-10-01
  response:
    body:
      string: "{\r\n  \"name\": \"nsg1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1\",\r\n
        \ \"etag\": \"W/\\\"d80f7979-6afd-4870-aced-1c3b2a1db1c0\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups\",\r\n  \"location\": \"westus\",\r\n
        \ \"properties\": {\r\n    \"provisioningState\": \"Updating\",\r\n    \"resourceGuid\":
        \"b2e0aefe-6a04-4515-ba03-1efc17e02205\",\r\n    \"securityRules\": [],\r\n
        \   \"defaultSecurityRules\": [\r\n      {\r\n        \"name\": \"AllowVnetInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetInBound\",\r\n
        \       \"etag\": \"W/\\\"d80f7979-6afd-4870-aced-1c3b2a1db1c0\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow inbound traffic from all VMs in VNET\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowAzureLoadBalancerInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowAzureLoadBalancerInBound\",\r\n
        \       \"etag\": \"W/\\\"d80f7979-6afd-4870-aced-1c3b2a1db1c0\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow inbound traffic from azure load balancer\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"AzureLoadBalancer\",\r\n          \"destinationAddressPrefix\": \"*\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\":
        \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllInBound\",\r\n
        \       \"etag\": \"W/\\\"d80f7979-6afd-4870-aced-1c3b2a1db1c0\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Deny all inbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n
        \         \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\":
        [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n      },\r\n
        \     {\r\n        \"name\": \"AllowVnetOutBound\",\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetOutBound\",\r\n
        \       \"etag\": \"W/\\\"d80f7979-6afd-4870-aced-1c3b2a1db1c0\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to all VMs
        in VNET\",\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\":
        \"*\",\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Outbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowInternetOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowInternetOutBound\",\r\n
        \       \"etag\": \"W/\\\"d80f7979-6afd-4870-aced-1c3b2a1db1c0\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to Internet\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"*\",\r\n          \"destinationAddressPrefix\": \"Internet\",\r\n          \"access\":
        \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\": \"Outbound\",\r\n
        \         \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllOutBound\",\r\n
        \       \"etag\": \"W/\\\"d80f7979-6afd-4870-aced-1c3b2a1db1c0\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Deny all outbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Outbound\",\r\n          \"sourcePortRanges\":
        [],\r\n          \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\":
        [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n      }\r\n
        \   ]\r\n  }\r\n}"
    headers:
      azure-asyncnotification:
      - Enabled
      azure-asyncoperation:
      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/ade404d4-800b-42ae-979a-096611759847?api-version=2017-10-01
      cache-control:
      - no-cache
      content-length:
      - '6589'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 03:37:00 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 69ac5589-03bb-40e7-a454-35c01360f767
      x-ms-ratelimit-remaining-subscription-writes:
      - '1199'
    status:
      code: 201
      message: Created
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg create
      Connection:
      - keep-alive
      ParameterSetName:
      - --name -g
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/ade404d4-800b-42ae-979a-096611759847?api-version=2017-10-01
  response:
    body:
      string: "{\r\n  \"status\": \"Succeeded\"\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '29'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 03:37:03 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 0abbc788-7182-49b6-bdae-63b47f9e5d5a
    status:
      code: 200
      message: OK
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg create
      Connection:
      - keep-alive
      ParameterSetName:
      - --name -g
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1?api-version=2017-10-01
  response:
    body:
      string: "{\r\n  \"name\": \"nsg1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1\",\r\n
        \ \"etag\": \"W/\\\"cd39100b-4a89-4723-a83f-877f579aaed3\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups\",\r\n  \"location\": \"westus\",\r\n
        \ \"properties\": {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"resourceGuid\":
        \"b2e0aefe-6a04-4515-ba03-1efc17e02205\",\r\n    \"securityRules\": [],\r\n
        \   \"defaultSecurityRules\": [\r\n      {\r\n        \"name\": \"AllowVnetInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetInBound\",\r\n
        \       \"etag\": \"W/\\\"cd39100b-4a89-4723-a83f-877f579aaed3\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow inbound traffic from all VMs in VNET\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowAzureLoadBalancerInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowAzureLoadBalancerInBound\",\r\n
        \       \"etag\": \"W/\\\"cd39100b-4a89-4723-a83f-877f579aaed3\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow inbound traffic from azure load balancer\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"AzureLoadBalancer\",\r\n          \"destinationAddressPrefix\": \"*\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\":
        \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllInBound\",\r\n
        \       \"etag\": \"W/\\\"cd39100b-4a89-4723-a83f-877f579aaed3\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Deny all inbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n
        \         \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\":
        [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n      },\r\n
        \     {\r\n        \"name\": \"AllowVnetOutBound\",\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetOutBound\",\r\n
        \       \"etag\": \"W/\\\"cd39100b-4a89-4723-a83f-877f579aaed3\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to all VMs
        in VNET\",\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\":
        \"*\",\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Outbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowInternetOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowInternetOutBound\",\r\n
        \       \"etag\": \"W/\\\"cd39100b-4a89-4723-a83f-877f579aaed3\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to Internet\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"*\",\r\n          \"destinationAddressPrefix\": \"Internet\",\r\n          \"access\":
        \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\": \"Outbound\",\r\n
        \         \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllOutBound\",\r\n
        \       \"etag\": \"W/\\\"cd39100b-4a89-4723-a83f-877f579aaed3\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Deny all outbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Outbound\",\r\n          \"sourcePortRanges\":
        [],\r\n          \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\":
        [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n      }\r\n
        \   ]\r\n  }\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '6596'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 03:37:03 GMT
      etag:
      - W/"cd39100b-4a89-4723-a83f-877f579aaed3"
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 2a7dd2d6-8420-49c6-a71a-90e16a1c6333
    status:
      code: 200
      message: OK
- request:
    body: '{"name": "rule1", "properties": {"access": "Allow", "destinationAddressPrefixes":
      ["10.0.0.0/24", "11.0.0.0/24"], "destinationPortRange": "80", "direction": "Inbound",
      "priority": 1000, "protocol": "*", "sourceAddressPrefix": "*", "sourcePortRanges":
      ["700-900", "1000-1100"]}}'
    headers:
      Accept:
      - application/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule create
      Connection:
      - keep-alive
      Content-Length:
      - '277'
      Content-Type:
      - application/json
      ParameterSetName:
      - --access --destination-address-prefixes --direction --nsg-name -g --source-address-prefixes
        -n --source-port-ranges --priority
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2017-10-01
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"b989d51e-db3e-4c17-a4a9-7763a34ec625\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Updating\",\r\n    \"protocol\": \"*\",\r\n
        \   \"destinationPortRange\": \"80\",\r\n    \"sourceAddressPrefix\": \"*\",\r\n
        \   \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\":
        \"Inbound\",\r\n    \"sourcePortRanges\": [\r\n      \"700-900\",\r\n      \"1000-1100\"\r\n
        \   ],\r\n    \"destinationPortRanges\": [],\r\n    \"sourceAddressPrefixes\":
        [],\r\n    \"destinationAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\n
        \     \"11.0.0.0/24\"\r\n    ]\r\n  }\r\n}"
    headers:
      azure-asyncnotification:
      - Enabled
      azure-asyncoperation:
      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/98115146-6f58-4a74-a161-3308f278e7ca?api-version=2017-10-01
      cache-control:
      - no-cache
      content-length:
      - '786'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 03:37:05 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 00f27073-062c-48a2-8c88-0525a9f44840
      x-ms-ratelimit-remaining-subscription-writes:
      - '1199'
    status:
      code: 201
      message: Created
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule create
      Connection:
      - keep-alive
      ParameterSetName:
      - --access --destination-address-prefixes --direction --nsg-name -g --source-address-prefixes
        -n --source-port-ranges --priority
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/98115146-6f58-4a74-a161-3308f278e7ca?api-version=2017-10-01
  response:
    body:
      string: "{\r\n  \"status\": \"Succeeded\"\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '29'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 03:37:15 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 7088d391-6413-46c2-8863-93fbb48470bc
    status:
      code: 200
      message: OK
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule create
      Connection:
      - keep-alive
      ParameterSetName:
      - --access --destination-address-prefixes --direction --nsg-name -g --source-address-prefixes
        -n --source-port-ranges --priority
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2017-10-01
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"f8f84e68-0cfd-4c1a-88c9-52b7a4020a0f\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"protocol\": \"*\",\r\n
        \   \"destinationPortRange\": \"80\",\r\n    \"sourceAddressPrefix\": \"*\",\r\n
        \   \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\":
        \"Inbound\",\r\n    \"sourcePortRanges\": [\r\n      \"700-900\",\r\n      \"1000-1100\"\r\n
        \   ],\r\n    \"destinationPortRanges\": [],\r\n    \"sourceAddressPrefixes\":
        [],\r\n    \"destinationAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\n
        \     \"11.0.0.0/24\"\r\n    ]\r\n  }\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '787'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 03:37:15 GMT
      etag:
      - W/"f8f84e68-0cfd-4c1a-88c9-52b7a4020a0f"
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - c4794af4-2894-4970-8ead-b29f40d7c09e
    status:
      code: 200
      message: OK
- request:
    body: null
    headers:
      Accept:
      - application/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule update
      Connection:
      - keep-alive
      ParameterSetName:
      - --destination-address-prefixes --nsg-name -g --source-address-prefixes -n
        --source-port-ranges --destination-port-ranges
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2017-10-01
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"f8f84e68-0cfd-4c1a-88c9-52b7a4020a0f\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"protocol\": \"*\",\r\n
        \   \"destinationPortRange\": \"80\",\r\n    \"sourceAddressPrefix\": \"*\",\r\n
        \   \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\":
        \"Inbound\",\r\n    \"sourcePortRanges\": [\r\n      \"700-900\",\r\n      \"1000-1100\"\r\n
        \   ],\r\n    \"destinationPortRanges\": [],\r\n    \"sourceAddressPrefixes\":
        [],\r\n    \"destinationAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\n
        \     \"11.0.0.0/24\"\r\n    ]\r\n  }\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '787'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 03:37:17 GMT
      etag:
      - W/"f8f84e68-0cfd-4c1a-88c9-52b7a4020a0f"
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 4552827c-1645-4bfb-ab60-d9301983d662
    status:
      code: 200
      message: OK
- request:
    body: '{"etag": "W/\"f8f84e68-0cfd-4c1a-88c9-52b7a4020a0f\"", "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1",
      "name": "rule1", "properties": {"access": "Allow", "destinationAddressPrefix":
      "Internet", "destinationPortRanges": ["500-1000", "2000", "3000"], "direction":
      "Inbound", "priority": 1000, "protocol": "*", "provisioningState": "Succeeded",
      "sourceAddressPrefixes": ["10.0.0.0/24", "11.0.0.0/24"], "sourcePortRange":
      "*"}}'
    headers:
      Accept:
      - application/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule update
      Connection:
      - keep-alive
      Content-Length:
      - '554'
      Content-Type:
      - application/json
      ParameterSetName:
      - --destination-address-prefixes --nsg-name -g --source-address-prefixes -n
        --source-port-ranges --destination-port-ranges
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2017-10-01
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"99f5c549-2c07-4746-8cb4-a8acb08f99f2\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Updating\",\r\n    \"protocol\": \"*\",\r\n
        \   \"sourcePortRange\": \"*\",\r\n    \"destinationAddressPrefix\": \"Internet\",\r\n
        \   \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\":
        \"Inbound\",\r\n    \"sourcePortRanges\": [],\r\n    \"destinationPortRanges\":
        [\r\n      \"500-1000\",\r\n      \"2000\",\r\n      \"3000\"\r\n    ],\r\n
        \   \"sourceAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\n      \"11.0.0.0/24\"\r\n
        \   ],\r\n    \"destinationAddressPrefixes\": []\r\n  }\r\n}"
    headers:
      azure-asyncnotification:
      - Enabled
      azure-asyncoperation:
      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/30ea86f4-045f-4628-aac4-931f67450229?api-version=2017-10-01
      cache-control:
      - no-cache
      content-length:
      - '803'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 03:37:18 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 303cc297-93d3-4681-b646-8876d7f279f0
      x-ms-ratelimit-remaining-subscription-writes:
      - '1199'
    status:
      code: 200
      message: OK
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule update
      Connection:
      - keep-alive
      ParameterSetName:
      - --destination-address-prefixes --nsg-name -g --source-address-prefixes -n
        --source-port-ranges --destination-port-ranges
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/30ea86f4-045f-4628-aac4-931f67450229?api-version=2017-10-01
  response:
    body:
      string: "{\r\n  \"status\": \"Succeeded\"\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '29'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 03:37:28 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 131ad401-61cc-4341-961b-0970a83aff3f
    status:
      code: 200
      message: OK
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule update
      Connection:
      - keep-alive
      ParameterSetName:
      - --destination-address-prefixes --nsg-name -g --source-address-prefixes -n
        --source-port-ranges --destination-port-ranges
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2017-10-01
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"a4f37469-822b-4d33-b325-866f0f469f33\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"protocol\": \"*\",\r\n
        \   \"sourcePortRange\": \"*\",\r\n    \"destinationAddressPrefix\": \"Internet\",\r\n
        \   \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\":
        \"Inbound\",\r\n    \"sourcePortRanges\": [],\r\n    \"destinationPortRanges\":
        [\r\n      \"500-1000\",\r\n      \"2000\",\r\n      \"3000\"\r\n    ],\r\n
        \   \"sourceAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\n      \"11.0.0.0/24\"\r\n
        \   ],\r\n    \"destinationAddressPrefixes\": []\r\n  }\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '804'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 03:37:29 GMT
      etag:
      - W/"a4f37469-822b-4d33-b325-866f0f469f33"
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 30441b7d-185b-49dd-87b7-24ed9a5cfb66
    status:
      code: 200
      message: OK
version: 1
